test/invalid-semantics/fc66494_no_main/no_main.mag
-- Author: 66494, Tiago Silva

const _ : Int = 0